--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,16 @@ project(otterbot VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_definitions(-D_REENTRANT -D_DEBUG)
-
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
+
+include(FetchContent)
+FetchContent_Declare(
+  glog
+  GIT_REPOSITORY https://github.com/google/glog.git
+  GIT_TAG        v0.5.0
+)
+FetchContent_MakeAvailable(glog)
 
 include_directories(include)
 
@@ -23,15 +29,14 @@ file(GLOB API_INCLUDES ${API_INCLUDE_DIR}/*.h)
 
 include_directories(${API_INCLUDE_DIR} ${IB_POSIX_CLIENT_INCLUDE_DIR})
 
-file(GLOB_RECURSE OTTER_SOURCES "src/*.cpp")
-
-add_executable(${PROJECT_NAME} ${OTTER_SOURCES})
-
 add_subdirectory(submodule/TwsApiCpp/TwsApiC++)
 
-# target_link_libraries(${PROJECT_NAME} tws_cpp_api Threads::Threads)
-# target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
+file(GLOB_RECURSE OTTER_SOURCES "src/*.cpp")
 
-# Uncomment and modify the lines below to link external libraries, if needed
-# find_package(SomeExternalLib REQUIRED)
-# target_link_libraries(${PROJECT_NAME} SomeExternalLib::SomeExternalLib)
+message(STATUS "OTTER_SOURCES: ${OTTER_SOURCES}")
+
+add_executable(${PROJECT_NAME} tests/otterbot.cpp ${OTTER_SOURCES})
+target_link_libraries(${PROJECT_NAME} tws_cpp_api Threads::Threads glog::glog)
+
+add_executable(ibkrbot tests/ibkrbot.cpp ${OTTER_SOURCES})
+target_link_libraries(ibkrbot tws_cpp_api Threads::Threads glog::glog)
